-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.0
-
None
Currently it is not possible to pass an error message or error state to the developer when the registration of a rfcomm service fails or when listen() fails.
| For Gerrit Dashboard: QTBUG-32669 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 66051,4 | Error handling for QBluetoothServer | dev | qt/qtconnectivity | Status: MERGED | +2 | 0 |
| 66299,1 | Fixing small QBluetoothServer issues. | dev | qt/qtconnectivity | Status: ABANDONED | 0 | 0 |
| 66300,1 | Fixing small QBluetoothServer issues | stable | qt/qtconnectivity | Status: MERGED | +2 | 0 |