Fixing small QBluetoothServer issues

-extending documentation
-emit error signal when setting a new error

Task-number: QTBUG-32669
Change-Id: I16b8a149792ed5068a7bd76af874477084802aea
Reviewed-by: Fabian Bumberger <fbumberger@rim.com>
Reviewed-by: Alex Blasche <alexander.blasche@digia.com>